--- a/TicketAuditory.html
+++ b/TicketAuditory.html
@@ -54,6 +54,13 @@
       </div>
     </main>
        
+    <div class="menu">
+        <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
+        <a href="#"><img src="img/menu/tickets_inactive.png" alt=""></a>
+        <a href="dashboard.html"><img src="img/menu/dashboard_activo.png" alt=""></a>
+        <a href="notificaciones.html"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
+        <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
+    </div>
 
 
     
