--- a/ticketsDashboard.html
+++ b/ticketsDashboard.html
@@ -16,7 +16,7 @@
           <img class="back" src="img/Left.png" alt="">
         </div>
         <div class="col text-center">
-          <h2 class="headerText m-0">Historial de Tickets</h2>
+          <h2 class="headerText m-0">Mis Tickets</h2>
         </div>
         <div class="col-auto calendar">
           <img class="calendar" src="img/Calendar.png" alt="">
@@ -48,38 +48,19 @@
     <div class="row gx-0">
       <div class="col-12">
         <div class="card mx-auto" style="width: 97%;">
-          <div class="card-body">
-            <div class="d-flex flex-wrap align-items-start ticket-row">
-              <div class="ticket-col1">
-                <div class="idText"><strong><p>01</p></strong></div>
-                <div class="date"><strong><p>Abr,25</p></strong></div>
-              </div>
-              <div class="ticket-col2">
-                <div class="description"><p>No funcionan los filtros aaaaaaaaaaaaaaaaaaaaaaaaaa</p></div>
-                <div class="id">
-                  <p>#0001</p>
-                </div>
-                <div class="TicketStatus">
-                <span class="badge bg-danger">Pendiente</span>
-                </div>
-              </div>
-              <div class="ticket-col3">
-                <svg class="iconSVG" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M12 21q-3.15 0-5.575-1.912T3.275 14.2q-.1-.375.15-.687t.675-.363q.4-.05.725.15t.45.6q.6 2.25 2.475 3.675T12 19q2.925 0 4.963-2.037T19 12t-2.037-4.962T12 5q-1.725 0-3.225.8T6.25 8H8q.425 0 .713.288T9 9t-.288.713T8 10H4q-.425 0-.712-.288T3 9V5q0-.425.288-.712T4 4t.713.288T5 5v1.35q1.275-1.6 3.113-2.475T12 3q1.875 0 3.513.713t2.85 1.924t1.925 2.85T21 12t-.712 3.513t-1.925 2.85t-2.85 1.925T12 21m1-9.4l2.5 2.5q.275.275.275.7t-.275.7t-.7.275t-.7-.275l-2.8-2.8q-.15-.15-.225-.337T11 11.975V8q0-.425.288-.712T12 7t.713.288T13 8z"/></svg>
-                <div class="AnotherDiv">
-                <div class="TicketPriority">
-                <p class="TicketPriority">Prioridad: media</p>
-                </div>
-                <svg class="iconSVG svg2" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#989494" d="M2 22V4q0-.825.588-1.412T4 2h16q.825 0 1.413.588T22 4v12q0 .825-.587 1.413T20 18H6zm4-8h8v-2H6zm0-3h12V9H6zm0-3h12V6H6z"/></svg>
-                
-                </div>
-
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
   </main>
+
+
+  <div class="menu">
+        <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
+        <a href="#"><img src="img/menu/tickets_inactive.png" alt=""></a>
+        <a href="dashboard.html"><img src="img/menu/dashboard_activo.png" alt=""></a>
+        <a href="notificaciones.html"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
+        <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
+  </div>
  
   <script src="js/ticketsDashboard.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
