--- a/TicketInformationTech.html
+++ b/TicketInformationTech.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/TicketInformation.css">
+  <link rel="stylesheet" href="css/TicketInformationTech.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <title>Informacion del Ticket</title>
 </head>
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-auto">
-          <a href="ticketsDashboard.html">
+          <a href="ticketsDashboardTech.html">
             <img class="back" src="img/Left.png" alt="Volver al dashboard">
           </a>
         </div>
@@ -23,9 +23,9 @@
       </div>
     </div>
   </header>
- 
+  
   <div class="imgFondo"></div>
- 
+  
   <main>
     <div class="row gx-0">
       <div class="col-12">
@@ -44,6 +44,7 @@
                   <p id="ticket-id"></p>
                 </div>
                 <div class="ticket-status-banner status-pendiente" id="ticket-status"></div>
+              </div>
             </div>
           </div>
         </div>
@@ -56,13 +57,15 @@
             <div class="d-flex flex-wrap align-items-start ticket-row">
               <div class="ticket-col2">
                 <div class="ContentTicket">
-                  <div class="Headers"><p>Descripcion:</p></div>
+                  <div class="Headers"><p>Descripción:</p></div>
                   <div class="Data"><p id="ticket-description"></p></div>
                 </div>
                 <div class="ContentTicket">
-                  <div class="Headers"><p>Asignado a:</p></div>
-                  <div class="Data"><p id="ticket-assigned-to"></p></div>
-                </div>
+                  <div class="Headers"><p>Creado por:</p></div>
+                  <div class="Data"><p id="ticket-creado-por"></p></div> </div>
+                <div class="ContentTicket">
+                  <div class="Headers"><p>Categoría:</p></div>
+                  <div class="Data"><p id="ticket-categoria"></p></div> </div>
                 <div class="ContentTicket">
                   <div class="Headers"><p>Fecha de creación:</p></div>
                   <div class="Data"><p id="ticket-created"></p></div>
@@ -72,8 +75,8 @@
                   <div class="Data"><p id="ticket-closed"></p></div>
                 </div>
                 <div class="ContentTicket">
-                  <div class="Headers"><p>Observaciones:</p></div>
-                  <div class="Data"><p id="ticket-observations"></p></div>
+                  <div class="Headers"><p>Pasos de resolución:</p></div>
+                  <div class="Data"><input type="text" id="ticket-observations" class="pasos-resolucion-input"></div>
                 </div>
               </div>
             </div>
@@ -83,14 +86,8 @@
     </div>
 
     <div class="ticket-actions">
-      <button class="btn-edit-ticket">EDITAR TICKET</button>
-      <button class="btn-delete">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#504c4c" d="M20 6a1 1 0 0 1 .117 1.993L20 8h-.081L19 19a3 3 0 0 1-2.824 2.995L16 22H8c-1.598 0-2.904-1.249-2.992-2.75l-.005-.167L4.08 8H4a1 1 0 0 1-.117-1.993L4 6zm-6-4a2 2 0 0 1 2 2a1 1 0 0 1-1.993.117L14 4h-4l-.007.117A1 1 0 0 1 8 4a2 2 0 0 1 1.85-1.995L10 2z"/></svg>
-      </button>
+      <button class="btn-edit-ticket">FINALIZAR TICKET</button>
     </div>
-
-    
-    
   </main>
   <div class="menu">
         <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
@@ -99,8 +96,8 @@
         <a href="notificaciones.html"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
         <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
- 
-  <script src="js/TicketInformation.js"></script>
+  
+  <script src="js/TicketInformationTech.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
