--- a/ticketsDashboardTech.html
+++ b/ticketsDashboardTech.html
@@ -16,7 +16,7 @@
       <div class="row align-items-center">
         <div class="col-auto">
 
-          <a href="dashboard.html"><img class="back" src="img/Left.png" alt=""></a>
+          <a href="dashboardTech.html"><img class="back" src="img/Left.png" alt=""></a>
 
         </div>
         <div class="col text-center">
