--- a/ticketsDashboardTech.html
+++ b/ticketsDashboardTech.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="css/ticketDashboardTech.css">
+  <link rel="stylesheet" href="css/ticketsDashboardTech.css">
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <title>Tickets</title>
@@ -71,7 +71,7 @@
         <a href="perfilTech.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
   </div>
  
-  <script src="js/ticketDashboardTech.js"></script>
+  <script src="js/ticketsDashboardTech.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
