--- a/dashboard.html
+++ b/dashboard.html
@@ -20,7 +20,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-10 col-sm-10 col-md-10 col-lg-10">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="search-container"> <input type="text" class="input-search"> <svg class="search-icon"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -29,11 +29,7 @@
                     </svg>
                 </div>
             </div>
-            <div class="col-2">
-                <div class="imgUser">
-                    <img src="img/Google-Symbol.png" alt="">
-                </div>
-            </div>
+            
         </div>
     </div>
 
@@ -42,7 +38,8 @@
             <div class="col-6 col-sm-6 col-md-6 col-lg-6 d-flex flex-column justify-content-end">
                 <div class="date">
                     <h5>Dashboard</h5>
-                    <p>Jueves, 1 Mayo 2025</p>
+                    <!--Texto que captura la fecha actual-->
+                    <p></p>
                 </div>
             </div>
             <div class="col-6 col-sm-6 col-md-6 col-lg-6 d-flex justify-content-center">
@@ -57,14 +54,24 @@
     <div class="white-content-section">
         <div class="d-flex justify-content-between align-items-center ">
             <h4 class="mb-1">Mis tickets</h4>
-            <a href="ticketsDashboard.html" class="text-decoration-none text-dark">Todos <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right-icon lucide-chevron-right"><path d="m9 18 6-6-6-6"/></svg><i class="bi bi-chevron-right"></i></a>
+            <a href="ticketsDashboard.html" class="text-decoration-none text-dark">Todos <svg
+                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                    class="lucide lucide-chevron-right-icon lucide-chevron-right">
+                    <path d="m9 18 6-6-6-6" />
+                </svg><i class="bi bi-chevron-right"></i></a>
         </div>
 
-        
+
     </div>
 
     <button id="btnAgregar" class="add-btn">
-        <a href="crearTicket.html"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-plus-icon lucide-plus"><path d="M5 12h14"/><path d="M12 5v14"/></svg></a>
+        <a href="crearTicket.html"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24"
+                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                class="lucide lucide-plus-icon lucide-plus">
+                <path d="M5 12h14" />
+                <path d="M12 5v14" />
+            </svg></a>
     </button>
 
     <div class="menu">
