--- a/perfil.html
+++ b/perfil.html
@@ -33,7 +33,7 @@
       </div>
     </div>
     <h3 id="nombre"></h3>
-    <h5 id="rol"></h5>
+    <h5>Cliente</h5>
     <p>Tickets generados: 9</p>
   </div>
   <div class="contenido">
