--- a/baseConocimientoTech.html
+++ b/baseConocimientoTech.html
@@ -28,8 +28,7 @@
             <div class="texto">
                 <h2>Tus soluciones rápidas</h2>
                 <hr>
-                <h2>¿Tienes preguntas?</h2>
-                <p>No dudes en recurrir a esta sección.</p>
+                <p>Agrega pasos detallados para que los clientes puedan seguirlos.</p>
             </div>
             <img src="img/base_conocimiento.png" alt="">
 
@@ -38,7 +37,7 @@
     <div class="contenido" id="contenido">
         <!--Tarjetas de artículos inyectadas por JS-->
     </div>
-    
+
 
     <div id="modal" class="modal oculto">
         <div class="modal-content">
@@ -55,13 +54,21 @@
             </div>
         </div>
         <div class="botones">
-        <button>
-            <svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z"/></svg>
-        </button>
-        <button>
-            <svg xmlns="http://www.w3.org/2000/svg" height="20" width="17.5" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M135.2 17.7L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-7.2-14.3C307.4 6.8 296.3 0 284.2 0L163.8 0c-12.1 0-23.2 6.8-28.6 17.7zM416 128L32 128 53.2 467c1.6 25.3 22.6 45 47.9 45l245.8 0c25.3 0 46.3-19.7 47.9-45L416 128z"/></svg>
-        </button>
-    </div>
+            <button id="edit">
+                <svg xmlns="http://www.w3.org/2000/svg" height="20" width="20"
+                    viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                    <path fill="#ffffff"
+                        d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z" />
+                </svg>
+            </button>
+            <button id="delete">
+                <svg xmlns="http://www.w3.org/2000/svg" height="20" width="17.5"
+                    viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                    <path fill="#ffffff"
+                        d="M135.2 17.7L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-7.2-14.3C307.4 6.8 296.3 0 284.2 0L163.8 0c-12.1 0-23.2 6.8-28.6 17.7zM416 128L32 128 53.2 467c1.6 25.3 22.6 45 47.9 45l245.8 0c25.3 0 46.3-19.7 47.9-45L416 128z" />
+                </svg>
+            </button>
+        </div>
     </div>
 
     <div id="modal-agregar" class="modal-agregar oculto">
@@ -72,15 +79,20 @@
             </div>
             <form id="frmAgregar">
                 <input type="text" id="titulo" placeholder="Título" required>
-                <textarea id="descripcion" placeholder="Descripción"></textarea>
-                <textarea id="solucion" placeholder="Pasos para solucionar"></textarea>
+                <textarea id="descripcion" placeholder="Descripción" aria-required="true"></textarea>
+                <textarea id="solucion" placeholder="Pasos para solucionar" aria-required="true"></textarea>
+                <input id="palabrasclave" placeholder="Palabras clave">
                 <button type="submit" class="contrast">Guardar</button>
             </form>
         </div>
     </div>
 
     <button class="add" id="add">
-        <svg xmlns="http://www.w3.org/2000/svg" height="14" width="12.25" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path fill="#ffffff" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" height="14" width="12.25"
+            viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+            <path fill="#ffffff"
+                d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z" />
+        </svg>
     </button>
 
     <div class="menu">
