--- a/dashboard.html
+++ b/dashboard.html
@@ -52,18 +52,22 @@
     </div>
 
     <div class="white-content-section">
-        <div class="d-flex justify-content-between align-items-center ">
-            <h4 class="mb-1">Mis tickets</h4>
-            <a href="ticketsDashboard.html" class="text-decoration-none text-dark">Todos <svg
-                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                    class="lucide lucide-chevron-right-icon lucide-chevron-right">
-                    <path d="m9 18 6-6-6-6" />
-                </svg><i class="bi bi-chevron-right"></i></a>
-        </div>
-
-
+    <div class="d-flex justify-content-between align-items-center ">
+        <h4 class="mb-1">Mis tickets</h4>
+        <a href="ticketsDashboard.html" class="text-decoration-none text-dark">Todos <svg
+            xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+            class="lucide lucide-chevron-right-icon lucide-chevron-right">
+            <path d="m9 18 6-6-6-6" />
+        </svg><i class="bi bi-chevron-right"></i></a>
     </div>
+
+    <div id="tickets-container" class="mt-3">
+        <p class="text-muted text-center">Cargando tickets..</p>
+    </div>
+
+    <div id="grafico-ticket" class="grafico-container"></div>
+</div>
 
     <button id="btnAgregar" class="add-btn">
         <a href="crearTicket.html"><svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24"
@@ -82,7 +86,7 @@
         <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-    <script src="js/dashboard.js"></script>
+    <script type="module" src="js/Dashboard/dashboardController/dashboardController.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
