--- a/baseConocimiento.html
+++ b/baseConocimiento.html
@@ -76,7 +76,7 @@
         <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
 
-    <script src="js/scriptBaseConocimiento.js"></script>
+    <script type="module" src="js/BaseConocimiento/baseConocimientoController/baseConocimientoController.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
