--- a/TicketInformation.html
+++ b/TicketInformation.html
@@ -96,11 +96,11 @@
         <a href="#"><img src="img/menu/baseconocimiento_inactive.png" alt=""></a>
         <a href="#"><img src="img/menu/tickets_inactive.png" alt=""></a>
         <a href="dashboard.html"><img src="img/menu/dashboard_activo.png" alt=""></a>
-        <a href="notificaciones.html"><img src="img/menu/notificationes_inactivo.png" alt=""></a>
+        <a href="notificaciones.html"><img src="img/menu/notificaciones_inactive.png" alt=""></a>
         <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
     </div>
  
-  <script src="js/TicketInformation.js"></script>
+  <script type= "module" src="js/TicketInformation.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
