--- a/ticketsDashboard.html
+++ b/ticketsDashboard.html
@@ -31,27 +31,26 @@
     <div class="ticketsFilter">
       <div class="row text-center g-0">
         <div class="col"><button class="btn filter-btn btnfilter">Todo</button></div>
-        <div class="col"><button class="btn filter-btn btnfilter">Pendiente</button></div>
+        <div class="col"><button class="btn filter-btn btnfilter">En espera</button></div> 
         <div class="col"><button class="btn filter-btn btnfilter">En proceso</button></div>
         <div class="col"><button class="btn filter-btn btnfilter">Completado</button></div>
-      </div>
+    </div>
     </div>
   </div>
  
-  <main>
+ <main>
     <div class="row">
       <div class="col-auto textTicket">
         <strong><p>Tickets Pendientes</p></strong>
       </div>
     </div>
- 
+
     <div class="row gx-0">
-      <div class="col-12">
-        <div class="card mx-auto" style="width: 97%;">
-        </div>
-      </div>
+      <!-- Hemos quitado aquí la tarjeta vacía y añadido id="ticketsContainer" -->
+      <div id="ticketsContainer" class="col-12"></div>
     </div>
   </main>
+
 
 
   <div class="menu">
@@ -62,7 +61,8 @@
         <a href="perfil.html"><img src="img/menu/perfil_inactive.png" alt=""></a>
   </div>
  
-  <script src="js/ticketsDashboard.js"></script>
+  <script type="module" src="js/ticketsDashboard.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
